--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -8,6 +8,7 @@ body {
   background-position: bottom;
   background-size: cover;
   background-repeat: no-repeat;
+  background-attachment: fixed;
   height: 100vh;
   padding: 100px;
 }
@@ -22,6 +23,28 @@ body {
   background-repeat: no-repeat;
 }
 
+.animal-div{
+  width: 12rem;
+  margin: 0.5rem;
+}
+
+
+.animal-img{
+  display: block;
+  width: 100%;
+  height: 12rem;
+}
+
+.icon-button{
+  width: 1.5rem;
+}
+
+.sound-button{
+  width: 100%;
+  height: 2rem;
+  border: none;
+  
+}
 
 /* Tabla de Participantes */
 
